--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -19,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.115",
     "@mui/material": "^5.11.4",
     "@next/font": "13.1.1",
+    "@popperjs/core": "^2.11.8",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -39,7 +39,6 @@
     "sass": "^1.57.1",
     "typescript": "4.9.4"
   },
-  
   "devDependencies": {
     "@svgr/webpack": "^6.5.1"
   }
