--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@firebase/auth": "^0.21.0",
-    "@mui/icons-material": "^5.11.0",
+    "@mui/icons-material": "^5.14.19",
     "@mui/lab": "^5.0.0-alpha.115",
-    "@mui/material": "^5.11.4",
+    "@mui/material": "^5.14.19",
     "@next/font": "13.1.1",
     "@popperjs/core": "^2.11.8",
     "@types/node": "18.11.18",
@@ -24,22 +23,20 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
-    "firebase": "^9.15.0",
-    "firebase-tools": "^11.20.0",
     "isomorphic-fetch": "^3.0.0",
     "moment": "^2.29.4",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
-    "react-toastify": "^9.1.1",
+    "react-toastify": "^9.1.3",
     "reactfire": "^4.2.2",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.5.1"
+    "@svgr/webpack": "^6.5.1",
+    "@types/material-ui": "^0.21.14"
   }
 }
