--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "flag-icon-css": "^4.1.7",
     "isomorphic-fetch": "^3.0.0",
     "moment": "^2.29.4",
     "next": "13.1.1",
